[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breathing-willow"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "gensim",
    "pyvis",
    "scikit-learn",
    "pytz",
    "openai",
]

[project.scripts]
willow = "breathing_willow_cli.breathing_willow:main"

[tool.setuptools.packages.find]
include = ["breathing_willow*", "breathing_willow_cli*", "w_cli*"]
exclude = ["tests*", "docs*", "agents*", "meta*"]

